--- a/ES6/.babelrc
+++ b/ES6/.babelrc
@@ -1,4 +1,5 @@
 {
     // Entender o ambiente que estamos trabalhando e converter para navegadores que não entendem
-    "presets": ["@babel/preset-env"]
+    "presets": ["@babel/preset-env"],
+    "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
