--- a/ES6/package.json
+++ b/ES6/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "ES6",
+  "name": "es6",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/preset-env": "^7.10.4"
   },
   "scripts": {
-    "dev": "babel ./arr.js -o ./bundle.js -w"
+    "dev": "babel ./scripts/shortSyntax.js -o ./scripts/bundle.js -w"
   }
 }
