--- a/ES6/.babelrc
+++ b/ES6/.babelrc
@@ -1,5 +1,8 @@
 {
     // Entender o ambiente que estamos trabalhando e converter para navegadores que não entendem
     "presets": ["@babel/preset-env"],
-    "plugins": ["@babel/plugin-proposal-object-rest-spread"]
+    "plugins": [
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-async-to-generator"
+    ]
 }
