--- a/ES6/package.json
+++ b/ES6/package.json
@@ -7,6 +7,8 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-transform-async-to-generator": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "8.0.0-beta.0",
     "webpack": "^4.44.0",
@@ -15,5 +17,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode=development"
+  },
+  "dependencies": {
+    "axios": "^0.19.2"
   }
 }
